feat: Enhance FeedbackController with authentication and improve exception handling
- Added @Authenticated annotation to all methods in FeedbackController to enforce user authentication.
- Updated GlobalExceptionHandler to handle client disconnections gracefully and log warnings.
- Introduced new configuration options for export jobs in application.yaml, including storage directory and cleanup intervals.
- Created performance indexes for various tables to optimize query performance.
- Added new messages for export job responses in English and Vietnamese localization files.
- Removed legacy SQL scripts related to category hierarchy and variant schema cutover.
- Cleaned up seed scripts for normalized product schema, ensuring proper insertion of spec and variant attributes.